--- a/index.html
+++ b/index.html
@@ -4,6 +4,39 @@
             <title>Hello!</title>
         </head>
         <body>
-           Hello, World!
+           Hello, Lindsay!
+
+
+           <p>
+            Lindsay Kristen (BradLey) nicKaLo
+
+I, Austyn Gregory Nickalo, have a confession to make...
+I Love you... and the reason for this are simple.
+
+You are Beautiful
+You are Brilliant
+You are SEXY
+You are the smartest person I know
+You are the most stubborn person I know
+You are the person I want to grow old with
+You are the person I want to spend the rest of my life with
+You have a heart of love and take care of everyone around you
+
+Now those are just a few reasons why I am so madly in love with you, but here are some of my favorite
+things about you.
+
+Your Titties!
+The freckles on your shoulder that I get to kiss
+Your beautiful long natural hair
+The small of your back that I get to kiss
+
+Now these lists could go on forever. You are the love of my life, and every day is a blessing with you.
+Some days may be hard, but every day grows our marriage and I have no regrets. Well that was a lie....I
+do have one single regret, and that was not meeting you sooner. Because you make me the best version
+of myself. You have changed me in so many ways and have made me the happiest I have ever been. I
+aspire to be the best husband, future father, and person I can be because of you. You truly are the love
+of my life. Thank you for being you and thank you for allowing me to love you.
+Ps. And of course thank you for that hot body for me to enjoy for the rest of our days!
+           </p>
         </body>
     </html>
