--- a/index.html
+++ b/index.html
@@ -6,9 +6,8 @@
         <body>
            Hello, Lindsay!
 
-
-           <p>
-            Lindsay Kristen (BradLey) nicKaLo
+        <h1>Lindsay Kristen (BradLey) Nickalo</h1>
+           <p>   
 
 I, Austyn Gregory Nickalo, have a confession to make...
 I Love you... and the reason for this are simple.
