--- a/index.html
+++ b/index.html
@@ -6,28 +6,28 @@
         <body>
            Hello, Lindsay!
 
-        <h1>Lindsay Kristen (BradLey) Nickalo</h1>
+        <h1>Lindsay Kristen (Bradley) Nickalo</h1>
            <p>   
 
-I, Austyn Gregory Nickalo, have a confession to make...
-I Love you... and the reason for this are simple.
+I, Austyn Gregory Nickalo, have a confession to make...<br>
+I Love you... and the reason for this are simple. <br>
 
-You are Beautiful
-You are Brilliant
-You are SEXY
-You are the smartest person I know
-You are the most stubborn person I know
-You are the person I want to grow old with
-You are the person I want to spend the rest of my life with
-You have a heart of love and take care of everyone around you
+You are Beautiful<br>
+You are Brilliant<br>
+You are SEXY<br>
+You are the smartest person I know<br>
+You are the most stubborn person I <br>
+You are the person I want to grow old with<br>
+You are the person I want to spend the rest of my life with<br>
+You have a heart of love and take care of everyone around you<br>
 
 Now those are just a few reasons why I am so madly in love with you, but here are some of my favorite
-things about you.
+things about you.<br>
 
-Your Titties!
-The freckles on your shoulder that I get to kiss
-Your beautiful long natural hair
-The small of your back that I get to kiss
+Your Titties!<br>
+The freckles on your shoulder that I get to kiss<br>
+Your beautiful long natural hair<br>
+The small of your back that I get to kiss<br>
 
 Now these lists could go on forever. You are the love of my life, and every day is a blessing with you.
 Some days may be hard, but every day grows our marriage and I have no regrets. Well that was a lie....I
